fix: wrong direction icon collapse right panel (#2967)
* fix: wrong direction icon collapse right panel

* fix: add back social icon

* fix: modal troubleshoot

* fix: shadow transparent theme

* fix: enable nitro_tensorrt_llm

* fix: disabled model dropdown when local server running

--- a/joi/src/core/Modal/styles.scss
+++ b/joi/src/core/Modal/styles.scss
@@ -16,6 +16,7 @@ fieldset,
     overflow: hidden;
     background-color: hsla(var(--modal-bg));
     border-radius: 8px;
+    font-size: 14px;
     position: fixed;
     z-index: 300;
     top: 50%;
